# intrinsics

./: CMakeLists.txt  README.md  main.cpp
include/: intrinsic_head.hpp
